--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
                 <artifactId>variation-commons-batch</artifactId>
                 <version>0.7.1-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>uk.ac.ebi.eva</groupId>
+                <artifactId>variation-commons-beacon</artifactId>
+                <version>0.7-SNAPSHOT</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.github.fakemongo</groupId>
