Barebones dbsnp json import pipeline impl

--- a/eva-accession-import/src/main/resources/application.properties
+++ b/eva-accession-import/src/main/resources/application.properties
@@ -1,38 +1,34 @@
-spring.batch.job.names=IMPORT_DBSNP_VARIANTS_JOB
+spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 
-parameters.assemblyAccession=
-parameters.assemblyName=
-parameters.assemblyReportUrl=
-parameters.taxonomyAccession=
-parameters.chunkSize=100
-#parameters.pageSize=
+# dbsnp
+parameters.dbsnp=/Users/rohnkum/casesafe/acsn/refsnp-sample.json
+parameters.dbsnpAccession=12345
+
+parameters.chunkSize=1000
 parameters.forceRestart=false
-parameters.fasta=
 
-# job repository datasource
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.tomcat.max-active=3
+# MongoDB for storing imported accessions
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=admin
+spring.data.mongodb.username=appAdmin
+spring.data.mongodb.password=evapipeline
+spring.data.mongodb.authentication-database=admin
+mongodb.read-preference=primaryPreferred
+
+parameters.assemblyAccession=345
+parameters.assemblyName=dummyName
+parameters.assemblyReportUrl=ftp://ftp.ncbi.nlm.nih.gov/genomes/all/GCF/000/001/405/GCF_000001405.38_GRCh38.p12/GCF_000001405.38_GRCh38.p12_assembly_report.txt
+parameters.taxonomyAccession=345
+
+parameters.fasta=/Users/rohnkum/Downloads/tmp-eva/GCF_000001405.38_GRCh38.p12_genomic.fna.gz
+
 
 # Only to set up the database!
 # spring.jpa.generate-ddl=true
 
-# dbSNP mirror datasource
-dbsnp.datasource.driver-class-name=org.postgresql.Driver
-dbsnp.datasource.url=
-dbsnp.datasource.username=
-dbsnp.datasource.password=
-dbsnp.datasource.tomcat.max-active=
 
-# MongoDB for storing imported accessions
-spring.data.mongodb.host=
-spring.data.mongodb.port=
-spring.data.mongodb.database=
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-spring.data.mongodb.authentication-database=admin
-mongodb.read-preference=primaryPreferred
+
+logging.level=DEBUG
 
 spring.main.web-environment=false
