fixed tests of AccessionReportWriterTest

--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -17,6 +17,7 @@ parameters.fasta=
 
 parameters.chunkSize=
 parameters.forceRestart=
+parameters.contigNaming=SEQUENCE_NAME
 
 spring.data.mongodb.database=
 mongodb.read-preference=|eva.mongo.read-preference|
