add contigNaming option to the rest of the tests

--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-recover-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-recover-test.properties
@@ -23,6 +23,7 @@ parameters.vcfAggregation=NONE
 parameters.fasta=src/test/resources/input-files/fasta/Homo_sapiens.GRCh37.75.chr20.head_1200.fa
 parameters.outputVcf=/tmp/accession-output.vcf
 parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/assembly_report.txt
+parameters.contigNaming=SEQUENCE_NAME
 
 spring.jpa.show-sql=true
 
