add eva-accession-pipeline README

--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -14,6 +14,8 @@ parameters.projectAccession=
 parameters.vcf=
 parameters.vcfAggregation=
 parameters.fasta=
+parameters.assemblyReportUrl=
+parameters.outputVcf=
 
 parameters.chunkSize=
 parameters.forceRestart=
