add mongo properties to eva-accession-pipeline examples

--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.batch.job.names=
 
 accessioning.instanceId=
 accessioning.submitted.categoryId=ss
-
 accessioning.monotonic.ss.blockSize=100000
 accessioning.monotonic.ss.blockStartValue=5000000000
 accessioning.monotonic.ss.nextBlockInterval=1000000000
@@ -10,18 +9,21 @@ accessioning.monotonic.ss.nextBlockInterval=1000000000
 parameters.assemblyAccession=
 parameters.taxonomyAccession=
 parameters.projectAccession=
-
 parameters.vcf=
 parameters.vcfAggregation=
 parameters.fasta=
 parameters.assemblyReportUrl=
 parameters.outputVcf=
-
 parameters.chunkSize=
 parameters.forceRestart=
 parameters.contigNaming=SEQUENCE_NAME
 
 spring.data.mongodb.database=
+spring.data.mongodb.host=
+spring.data.mongodb.port=
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+spring.data.mongodb.authentication-database=
 mongodb.read-preference=|eva.mongo.read-preference|
 
 spring.datasource.driver-class-name=org.postgresql.Driver
