--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>eva-accession-import</module>
         <module>eva-accession-release</module>
         <module>eva-accession-deprecate</module>
+        <module>eva-accession-import-dbsnp2</module>
     </modules>
 
     <properties>
@@ -56,7 +57,6 @@
                 <artifactId>variation-commons-batch</artifactId>
                 <version>0.7.1-SNAPSHOT</version>
             </dependency>
-
             <dependency>
                 <groupId>com.github.fakemongo</groupId>
                 <artifactId>fongo</artifactId>
