Correct docs, properties, and variantType to return exception for case with no expected Variant type

--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -5,17 +5,14 @@ parameters.input=src/test/resources/input-files/chrY50.json.bz2
 # reference sequence accession
 parameters.assembly=
 
-parameters.chunkSize=1000
+parameters.chunkSize=
 parameters.forceRestart=false
 
 # MongoDB for storing imported accessions
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=appAdmin
-spring.data.mongodb.password=evapipeline
+spring.data.mongodb.host=
+spring.data.mongodb.port=
+spring.data.mongodb.authentication-database==
+spring.data.mongodb.username=
+spring.data.mongodb.password=
 
 mongodb.read-preference=primaryPreferred
-
-# random port (randomizes default 8080)
-server.port=0
