--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 
-# dbSNP JSON input source
-parameters.input=src/test/resources/input-files/chrY50.json.bz2
-# reference sequence accession
+# DbSNP JSON input source
+parameters.input=src/test/resources/input-files/test-dbsnp.json.bz2
+# Reference sequence accession
 parameters.assembly=
 
 parameters.chunkSize=
