--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -14,5 +14,6 @@ spring.data.mongodb.port=
 spring.data.mongodb.authentication-database=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
+spring.data.mongodb.database=
 
 mongodb.read-preference=primaryPreferred
