--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 parameters.input=src/test/resources/input-files/test-dbsnp.json.bz2
 # Reference sequence accession
 parameters.assembly=
+parameters.assemblyReportUrl=file:src/test/resources/input-files/GCF_000001405.38_GRCh38.p12_assembly_report.txt
 
 parameters.chunkSize=
 parameters.forceRestart=false
