--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -5,15 +5,15 @@ parameters.input=src/test/resources/input-files/test-dbsnp.json.bz2
 # Reference sequence accession
 parameters.assembly=
 
-parameters.chunkSize=
+parameters.chunkSize=10
 parameters.forceRestart=false
 
 # MongoDB for storing imported accessions
-spring.data.mongodb.host=
-spring.data.mongodb.port=
-spring.data.mongodb.authentication-database=
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-spring.data.mongodb.database=
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=username
+spring.data.mongodb.password=password
+spring.data.mongodb.database=admin
 
 mongodb.read-preference=primaryPreferred
