--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 
 # DbSNP JSON input source
-parameters.input=src/test/resources/input-files/test-dbsnp.json.bz2
+parameters.input=
 # Reference sequence accession
 parameters.assembly=
 
-parameters.chunkSize=10
+parameters.chunkSize=
 parameters.forceRestart=false
 
 # MongoDB for storing imported accessions
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=username
-spring.data.mongodb.password=password
-spring.data.mongodb.database=admin
+spring.data.mongodb.host=
+spring.data.mongodb.port=
+spring.data.mongodb.authentication-database=
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+spring.data.mongodb.database=
 
 mongodb.read-preference=primaryPreferred
