Address PR feedback: trim assembly report, restore folder str

--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 
 # DbSNP JSON input source
-parameters.input=src/test/resources/input-files/json/test-dbsnp.json.bz2
+parameters.input=
 # Reference sequence accession
 parameters.assembly=
-parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/GCF_000001405.38_GRCh38.p12_assembly_report.txt
+parameters.assemblyReportUrl=
 
 parameters.chunkSize=
 parameters.forceRestart=false
