Add ref seq input parameter, ignore variant if it's assembly accession does not match ref seq accession

--- a/eva-accession-import-dbsnp2/src/test/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/test/resources/application.properties
@@ -2,8 +2,10 @@ spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 
 # dbSNP JSON input source
 parameters.input=src/test/resources/input-files/test-dbsnp.json.bz2
-# reference sequence accession
-parameters.assembly=GRCh38.p13
+# Genbank accession
+parameters.genbankAssembly=CRCh38.p12
+# Reference sequence accession
+parameters.refseqAssembly=GCF_000001405.38
 parameters.assemblyReportUrl=file:src/test/resources/input-files/GCF_000001405.38_GRCh38.p12_assembly_report.txt
 
 parameters.chunkSize=100
