--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 
 # DbSNP JSON input source
 parameters.input=
+# Genbank accession
+parameters.genbankAssembly=
 # Reference sequence accession
-parameters.assembly=
+parameters.refseqAssembly=
 parameters.assemblyReportUrl=
 
 parameters.chunkSize=
