Update description for genbank accession
Co-Authored-By: sundarvenkata-EBI <sundarvenkata@ebi.ac.uk>

--- a/eva-accession-import-dbsnp2/src/main/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 
 # DbSNP JSON input source
 parameters.input=
-# Genbank accession
+# Genbank accession - Please ensure that this is the equivalent accession to the RefSeq accession below as the equivalence is NOT verified by the program
 parameters.genbankAssembly=
 # Reference sequence accession
 parameters.refseqAssembly=
