--- a/eva-accession-import-dbsnp2/src/test/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/test/resources/application.properties
@@ -3,7 +3,7 @@ spring.batch.job.names=IMPORT_DBSNP_JSON_VARIANTS_JOB
 # dbSNP JSON input source
 parameters.input=src/test/resources/input-files/test-dbsnp.json.bz2
 # Genbank accession
-parameters.genbankAssembly=CRCh38.p12
+parameters.genbankAssembly=GCA_000001405.27
 # Reference sequence accession
 parameters.refseqAssembly=GCF_000001405.38
 parameters.assemblyReportUrl=file:src/test/resources/input-files/GCF_000001405.38_GRCh38.p12_assembly_report.txt
