--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -14,6 +14,17 @@ spring.data.mongodb.uri=mongodb://|eva.mongo.user|:|eva.mongo.passwd.url-encoded
 spring.data.mongodb.database=|eva.accession.mongo.database|
 mongodb.read-preference=|eva.mongo.read-preference|
 
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=test-db
+#spring.data.mongodb.password=
+
+human.mongodb.uri=mongodb://localhost:27017
+#human.mongodb.host=localhost
+#human.mongodb.port=27017
+human.mongodb.database=test
+#human.mongodb.password=
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=|eva.accession.jdbc.url|
 spring.datasource.username=|eva.accession.user|
