--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -12,9 +12,19 @@ accessioning.monotonic.test-rs.nextBlockInterval=1000000000
 
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
-spring.datasource.username=SA
-spring.datasource.password=
-
-spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.database=eva-accession-ws-test-db
+#spring.datasource.username=SA
+#spring.datasource.password=
+#
+#spring.data.mongodb.uri=mongodb://localhost:27017
+#spring.data.mongodb.database=eva-accession-ws-test-db
 mongodb.read-preference=primary
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=test-db
+spring.data.mongodb.password=
+
+human.mongodb.host=localhost
+human.mongodb.port=27017
+human.mongodb.database=test
+human.mongodb.password=
