fix tests from import module

--- a/eva-accession-import/src/test/resources/validate-contigs-fail.properties
+++ b/eva-accession-import/src/test/resources/validate-contigs-fail.properties
@@ -16,3 +16,8 @@ parameters.pageSize=100
 parameters.forceImport=false
 
 mongodb.read-preference=primary
+
+spring.data.mongodb.database=test
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=
+spring.data.mongodb.port=27017
