--- a/eva-accession-import/src/test/resources/validate-contigs.properties
+++ b/eva-accession-import/src/test/resources/validate-contigs.properties
@@ -16,3 +16,8 @@ parameters.chunkSize=100
 parameters.pageSize=100
 
 mongodb.read-preference=primary
+
+spring.data.mongodb.database=test
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=
+spring.data.mongodb.port=27017
