include querying merged clustered variants for human

--- a/eva-accession-core/src/test/resources/ss-accession-test.properties
+++ b/eva-accession-core/src/test/resources/ss-accession-test.properties
@@ -1,13 +1,22 @@
 accessioning.instanceId=test-instance-01
 accessioning.submitted.categoryId=test-ss
+accessioning.clustered.categoryId=test-rs
 
 accessioning.monotonic.test-ss.blockSize=100000
 accessioning.monotonic.test-ss.blockStartValue=5000000000
 accessioning.monotonic.test-ss.nextBlockInterval=1000000000
+accessioning.monotonic.test-rs.blockSize=100000
+accessioning.monotonic.test-rs.blockStartValue=3000000000
+accessioning.monotonic.test-rs.nextBlockInterval=1000000000
 
 spring.data.mongodb.database=submitted-variants-test
 spring.data.mongodb.host=localhost
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
+
+human.mongodb.database=human-variants-test
+human.mongodb.host=localhost
+human.mongodb.password=
+human.mongodb.port=27017
 
 mongodb.read-preference=primary
