--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
 stages:
     - test
 
+image: maven:3.6.3-jdk-8
+
+services:
+    - mongo:3.2.17
+
 test:
-    image: maven:3.6.3-jdk-8
     stage: test
     script:
-        - mvn test
-    artifacts:
-        reports:
-            junit:
-                - "eva-accession-ws/target/surefire-reports/TEST-*.xml"
+        - mvn test -pl 'eva-accession-core'
