add default eva.mongo.host.test value in POM file, in gitlab pipeline property set in maven command, added filtering in pom files for test resources

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ services:
 test:
     stage: test
     script:
-        - mvn clean test -pl 'eva-accession-core,eva-accession-ws'
+        - mvn clean test -pl 'eva-accession-core,eva-accession-ws' -Deva.mongo.host.test=mongo
     environment:
         name: test-env
     only:
