--- a/eva-accession-core/src/test/resources/properties/ss-accession-test.properties
+++ b/eva-accession-core/src/test/resources/properties/ss-accession-test.properties
@@ -10,12 +10,12 @@ accessioning.monotonic.test-rs.blockStartValue=3000000000
 accessioning.monotonic.test-rs.nextBlockInterval=1000000000
 
 spring.data.mongodb.database=submitted-variants-test
-spring.data.mongodb.host=mongo
+spring.data.mongodb.host=|eva.mongo.host.test|
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 
 human.mongodb.database=human-variants-test
-human.mongodb.host=mongo
+human.mongodb.host=|eva.mongo.host.test|
 human.mongodb.password=
 human.mongodb.port=27017
 
