--- a/eva-accession-core/src/test/resources/properties/test-variants-writer.properties
+++ b/eva-accession-core/src/test/resources/properties/test-variants-writer.properties
@@ -6,7 +6,7 @@ accessioning.monotonic.test-ss.blockStartValue=5000000000
 accessioning.monotonic.test-ss.nextBlockInterval=1000000000
 
 spring.data.mongodb.database=submitted-variants-test
-spring.data.mongodb.host=mongo
+spring.data.mongodb.host=|eva.mongo.host.test|
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 
