--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -1,4 +1,6 @@
 parameters.vcf=src/test/resources/input-files/vcf/aggregated_accessioned_custom.vcf.gz
+parameters.projectAccession=
+parameters.assemblyAccession=GCA_000000001.1
 parameters.chunkSize=2
 
 spring.data.mongodb.database=test-db
