accessioning service implementation for clustering, configuration and tests

--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -3,6 +3,12 @@ parameters.projectAccession=
 parameters.assemblyAccession=GCA_000000001.1
 parameters.chunkSize=2
 
+accessioning.instanceId=test-instance-01
+accessioning.clustered.categoryId=rs
+accessioning.monotonic.rs.blockSize=100000
+accessioning.monotonic.rs.blockStartValue=3000000000
+accessioning.monotonic.rs.nextBlockInterval=1000000000
+
 spring.data.mongodb.database=test-db
 spring.data.mongodb.host=localhost
 spring.data.mongodb.password=
