Changes to support Spring Boot 2
Changes to support Spring Boot 2 MongoDB object models/methods
 - ClusteringWriterTest.java
 - ClusteringVariantStepConfigurationTest.java
 - ClusteredVariantsRestControllerTest.java
 - HumanMongoConfiguration.java
 - MongoConfiguration.java
 - SubmittedVariantAccessioningRepositoryTest.java
 - SubmittedVariantAccessioningServiceTest.java

Use MongoDBBulkWriteException instead of BulkOperationException
 - ClusteringWriter.java
 - MongoBulkWriteExceptionUtils.java
 - DbsnpClusteredVariantOperationWriter.java
 - DbsnpClusteredVariantWriter.java
 - DbsnpJsonClusteredVariantsWriter.java
 - DbsnpSubmittedVariantOperationWriter.java
 - DbsnpSubmittedVariantWriter.java
 - DbsnpVariantsWriter.java
 - MergeOperationBuilder.java
 - DeprecationWriter.java

Expect DuplicateKeyException instead of BulkOperationException for accession collisions
 - DbsnpClusteredVariantWriterTest.java
 - DbsnpSubmittedVariantWriterTest.java

SubmittedVariantAccessioningRepositoryImpl.java - Use Criteria object for "and" conditions and make the findByAccessionGreaterThanEqualAndAccessionLessThanEqual method public so that it can be called from the tests

Allow bean definition overriding in properties files across all projects

Adapt to different job resume semantics in Spring Boot 2
 - DbsnpImportVariantsJobLauncherCommandLineRunner.java

Spring Boot 2 does not allow "with" method with null sort parameter on a MongoQuery object
 - MongoDbCursorItemReader.java

Adapt to Spring 2 RestTemplateAutoConfiguration behavior and package paths
 - ApplicationConfiguration.java (eva-accession-ws)
 - EvaAccessionApplication.java (eva-accession-ws)

--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.datasource.tomcat.max-active=3
 
 # Only to set up the database!
 # spring.jpa.generate-ddl=true
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
