--- a/eva-accession-core/src/test/resources/properties/ss-accession-test.properties
+++ b/eva-accession-core/src/test/resources/properties/ss-accession-test.properties
@@ -10,12 +10,14 @@ accessioning.monotonic.test-rs.blockStartValue=3000000000
 accessioning.monotonic.test-rs.nextBlockInterval=1000000000
 
 spring.data.mongodb.database=submitted-variants-test
-spring.data.mongodb.host=|eva.mongo.host.test|
+spring.data.mongodb.host=localhost
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
 
 human.mongodb.database=human-variants-test
-human.mongodb.host=|eva.mongo.host.test|
+human.mongodb.host=localhost
 human.mongodb.password=
 human.mongodb.port=27017
 
