--- a/eva-accession-deprecate/src/main/resources/application.properties
+++ b/eva-accession-deprecate/src/main/resources/application.properties
@@ -26,5 +26,7 @@ spring.data.mongodb.authentication-database=admin
 mongodb.read-preference=|eva.mongo.read-preference|
 
 spring.main.web-environment=false
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
 
 logging.level.uk.ac.ebi.eva.accession.dbsnp=INFO
