--- a/eva-accession-deprecate/src/test/resources/application.properties
+++ b/eva-accession-deprecate/src/test/resources/application.properties
@@ -3,3 +3,6 @@ mongodb.read-preference=primary
 
 parameters.chunk-size=10
 parameters.deprecateAll=true
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
