--- a/eva-accession-import-dbsnp2/src/test/resources/application.properties
+++ b/eva-accession-import-dbsnp2/src/test/resources/application.properties
@@ -25,3 +25,6 @@ dbsnp.datasource.username=SA
 dbsnp.datasource.password=
 dbsnp.datasource.schema=../eva-accession-core/src/test/resources/test-data/dbsnp-mirror-schema.sql
 dbsnp.datasource.data=../eva-accession-core/src/test/resources/test-data/dbsnp-mirror-data.sql
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
