--- a/eva-accession-import/src/test/resources/contig-test.properties
+++ b/eva-accession-import/src/test/resources/contig-test.properties
@@ -15,3 +15,6 @@ parameters.chunkSize=100
 parameters.pageSize=100
 
 mongodb.read-preference=primary
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
