--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -19,3 +19,6 @@ human.mongodb.database=|eva.accession.mongo.human.database|
 
 management.endpoints.web.exposure.include=info,health
 management.info.git.mode=full
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
