--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -12,6 +12,8 @@ accessioning.monotonic.test-rs.nextBlockInterval=1000000000
 
 spring.data.mongodb.uri=mongodb://|eva.mongo.host.test|:27017
 spring.data.mongodb.database=eva-accession-ws-test-db
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
 mongodb.read-preference=primary
 
 human.mongodb.uri=mongodb://|eva.mongo.host.test|:27017
