--- a/eva-accession-core/src/test/resources/properties/test-variants-writer.properties
+++ b/eva-accession-core/src/test/resources/properties/test-variants-writer.properties
@@ -11,3 +11,6 @@ spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 
 mongodb.read-preference=primary
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
