--- a/eva-accession-deprecate/src/test/resources/application_species_subset.properties
+++ b/eva-accession-deprecate/src/test/resources/application_species_subset.properties
@@ -5,3 +5,6 @@ mongodb.read-preference=primary
 parameters.chunk-size=10
 parameters.assemblyAccession=GCA_000000001.1,GCA_000000003.1
 parameters.deprecateAll=false
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
