--- a/eva-accession-import/src/main/resources/application.properties
+++ b/eva-accession-import/src/main/resources/application.properties
@@ -36,3 +36,5 @@ spring.data.mongodb.authentication-database=admin
 mongodb.read-preference=primaryPreferred
 
 spring.main.web-environment=false
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
