--- a/eva-accession-import/src/test/resources/validate-contigs-fail.properties
+++ b/eva-accession-import/src/test/resources/validate-contigs-fail.properties
@@ -21,3 +21,6 @@ spring.data.mongodb.database=test
 spring.data.mongodb.host=localhost
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
