--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-recover-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-recover-test.properties
@@ -29,3 +29,6 @@ spring.jpa.show-sql=true
 
 spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
