--- a/eva-accession-release/src/test/resources/application.properties
+++ b/eva-accession-release/src/test/resources/application.properties
@@ -17,3 +17,6 @@ parameters.chunkSize=1000
 
 spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
