eva-accession-core, eva-accession-ws tests should use variables for Mongo hostname
ss-accession-test.properties
 - Reverted changes per Josemi's review comments and documented the rationale

.gitlab-ci.yml
 - Documented the rationale for overriding the *eva.mongo.host.test* variable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ test:
     services:
         - mongo:3.2.17
     script:
+        # Gitlab exposes services under their own hostnames. So test host should be "mongo" instead of "localhost".
         - mvn clean test --projects 'eva-accession-core,eva-accession-ws' -Deva.mongo.host.test=mongo
     environment:
         name: test-env
