--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -10,6 +10,10 @@ accessioning.monotonic.test-rs.blockSize=100000
 accessioning.monotonic.test-rs.blockStartValue=3000000000
 accessioning.monotonic.test-rs.nextBlockInterval=1000000000
 
+# This symbolic variable is required because
+# this will be replaced with a default value "localhost" when run locally
+# (due to the filtering attribute specified in this project's POM)
+# (OR) this variable can be overridden in Gitlab with "mongo" (Gitlab services are exposed under their own hostname)
 spring.data.mongodb.uri=mongodb://|eva.mongo.host.test|:27017
 spring.data.mongodb.database=eva-accession-ws-test-db
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
