--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -14,3 +14,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
 mongodb.read-preference=primary
+
+# See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
+spring.main.allow-bean-definition-overriding=true
