getting the list of deployed aplications in tomcat

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ package-internal:
         MAVEN_PROFILE: internal
     only:
         - master
+        - feature/check-tomcat-deploy-started-correctly
 
 package-development:
     extends: .package
@@ -70,7 +71,8 @@ package-production:
         name: $ENVIRONMENT_NAME
     script:
         - apk add --update curl
-        - curl -u $TOMCAT_USER:$TOMCAT_PASSWORD -T "$WS_ARTIFACT_PATH" "http://$TOMCAT_HOST/manager/text/deploy?update=true&path=/eva/webservices/identifiers&version=$DATETIME" | grep "OK - Deployed application"
+#        - curl -u $TOMCAT_USER:$TOMCAT_PASSWORD -T "$WS_ARTIFACT_PATH" "http://$TOMCAT_HOST/manager/text/deploy?update=true&path=/eva/webservices/identifiers&version=$DATETIME" | grep "OK - Deployed application"
+        - curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:.*:eva#webservices#identifiers##$DATETIME"
 
 deploy-tomcat-internal:
     extends: .deploy-tomcat
@@ -83,6 +85,7 @@ deploy-tomcat-internal:
         - package-internal
     only:
         - master
+        - feature/check-tomcat-deploy-started-correctly
 
 deploy-tomcat-development:
     extends: .deploy-tomcat
