--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,9 +71,9 @@ package-production:
     environment:
         name: $ENVIRONMENT_NAME
     script:
-        - apk add --update curl
+        - apk add --update curl bash
         - curl -u $TOMCAT_USER:$TOMCAT_PASSWORD -T "$WS_ARTIFACT_PATH" "http://$TOMCAT_HOST/manager/text/deploy?update=true&path=/eva/webservices/identifiers&version=$DATETIME" | grep "OK - Deployed application"
-        - if (( $( curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:running:.*:eva#webservices#identifiers##$DATETIME" ) == "0" )) ; then exit 1; fi
+        - if (( $( curl -u $TOMCAT_USER:$TOMCAT_PASSWORD "http://$TOMCAT_HOST/manager/text/list" | grep -c "/eva/webservices/identifiers:running:.*:eva#webservices#identifiers##$DATETIME" ) == 0 )) ; then exit 1; fi
 
 deploy-tomcat-internal:
     extends: .deploy-tomcat
