minor properties to remove warnings

--- a/eva-accession-clustering/src/main/resources/application.properties
+++ b/eva-accession-clustering/src/main/resources/application.properties
@@ -26,7 +26,20 @@ spring.datasource.password=
 spring.datasource.tomcat.max-active=3
 
 # Only to set up the database!
+# jmmut: These don't work at the moment, maybe because we use both Spring 2 and Spring 1 through variation commons
 # spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.initialization-mode=always
+#
+# jmmut: Only this one worked
+# spring.batch.initialize-schema=always
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+# as this is a spring batch application, disable the embedded tomcat. This is the new way to do that for spring 2.
+spring.main.web-application-type=none
+
+# This entry is put just to avoid a warning message in the logs when you start the spring-boot application.
+# This bug is from hibernate which tries to retrieve some metadata from postgresql db and failed to find that and logs as a warni
+# It doesn't cause any issue though.
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
