hack to fix weird test error in intellij

--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -17,3 +17,6 @@ mongodb.read-preference=primary
 
 # See https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.1-Release-Notes#bean-overriding
 spring.main.allow-bean-definition-overriding=true
+
+# TODO jmmut: without this, tests pass in mvn but not in intellij (in intellij pass individually, but not together)
+spring.jmx.enabled=false
