--- a/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
+++ b/eva-accession-clustering/src/test/resources/clustering-pipeline-test.properties
@@ -1,5 +1,5 @@
 parameters.vcf=src/test/resources/input-files/vcf/aggregated_accessioned.vcf.gz
-parameters.projectAccession=
+parameters.projectAccession=projectId_1
 parameters.assemblyAccession=GCA_000000001.1
 parameters.chunkSize=2
 
